[package]
name = "mft"
version = "0.5.3"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mft = { version = "0.5.3", no-default-features = true }
pyo3 = { version = "0.9.2", features = ["extension-module"] }
num-traits = "^0.2"
log = "^0.4"
chrono = "^0.4"
pyo3-file = "0.3.1"
serde_json = "^1"
csv = "^1"
