[package]
name = "mft"
version = "0.6.1"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
abi3 = ["pyo3/abi3-py37"]

[dependencies]
mft_rs = { version = "0.6.1", no-default-features = true, package = "mft" }
pyo3 = { version = "0.18.1", features = ["extension-module"] }
num-traits = "^0.2"
log = "^0.4"
chrono = "^0.4"
pyo3-file = { git = "https://github.com/omerbenamram/pyo3-file" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
csv = "^1"

[patch.crates-io]
mft_rs = { git = "file:///home/juckelman/projects/mft", branch = "xattrs", package = "mft" }
