[package]
name = "mft"
version = "0.7.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
abi3 = ["pyo3/abi3-py37"]

[dependencies]
mft_rs = { version = "0.7.0", default-features = false, package = "mft" }
pyo3 = { version = "^0.26.0", features = ["extension-module"] }
num-traits = "^0.2"
log = { version = "^0.4", features = ["std"] }
pyo3-file = "^0.14.0"
serde_json = "^1"
csv = "^1"
